fix: logo margin on mobile

--- a/client/src/assets/scss/pages/client/splash.scss
+++ b/client/src/assets/scss/pages/client/splash.scss
@@ -37,10 +37,6 @@
     @media screen and (max-height: 500px) {
         margin-top: 10px;
     }
-
-    @media screen and (max-width: $screen_medium) {
-        margin-top: 150px;
-    }
 }
 
 #splash-modals {
